Add puzzle solver toggle (#1444)
* solve puzzles and added for 2 quests.

* Implement PuzzleWrapperStep

This is intended to make it easy to wrap any puzzle steps with this step, resulting in a solver not being shown.

* feat:Added PuzzleWrapper to Animal Magnetism

* feat:Added PuzzleWrapper to AKD

* feat:Improved text display for PuzzleWrapperStep

* feat:Added PuzzleWrapperStep to ASoH

* Add PuzzleWrapper to AToH

* feat:Added PuzzleWrapper to BCS

* feat:Added PuzzleWrapperStep to BaR

* feat:Added PuzzleWrapper to Biohazard

* feat:Add PuzzleWrapperStep to CotS

* feat:Checked Client of Kourend for PuzzleWrapper possibility

* feat:Added TODO for ClockTower to use PuzzleWrapper

* feat:Added PuzzleWrapper to Cold War

* feat:Added consider note to CoF for PuzzleWrapper

* feat:Added PuzzleWrapper to Death Plateau

* feat:Added PuzzleWrapper to DtoD

* feat:Added PuzzleWrapper to Whisperer in DT2

* feat:Redirected dialog and widget highlights to child of PuzzleWrapperStep

* feat:Added more methods for PuzzleWraperStep

* feat:Added PuzzleWrapper to Sucellus in DT2

* fix:Fixed rendering issues for no text in PuzzleWrapperStep

* feat:Added PuzzleWrapper to Perseriya steps in DT2

* feat:Add PuzzleWrapper to DS2

* feat:Added PuzzleWrapper to Dwarf Cannon

* feat:Added TODO notes on EW1+2 for PuzzleWrapper

* feat:Added Ernest the Chicken to Puzzle

* feat:Add PuzzleWrapper to ILH

* feat:Added PuzzleWrapper to King's Ransom

* feat:Added PuzzleWrapper to LD

* feat:Added PuzzleWrapper to SotN

* feat:Added PuzzleWrapper to SotF

* feat:Added PuzzleWrapper to TotR

* feat:Added PuzzleWrapper to TEoG

* feat:Added PuzzleWrapper to TFT

* feat:Added PuzzleWrapper to Fremmy Trials

* Delete LovakengjFavour.java

* feat:Added hide option for PuzzleWrapperStep

Allows for the sidebar not to just be 100 steps of 'Solve the puzzle'.

* feat:Added Fremennik Trials with PuzzleWrapper

* 